--- a/training/templates/training/check_feedback.html
+++ b/training/templates/training/check_feedback.html
@@ -1,5 +1,4 @@
-<!-- training/templates/training/check_feedback.html -->
-{% extends "base.html" %}
+{% comment %} {% extends "base.html" %} {% endcomment %}
 
 {% block content %}
 <h1>Check Feedback for {{ training.title }}</h1>
