--- a/events/templates/plugins/upcoming_events.html
+++ b/events/templates/plugins/upcoming_events.html
@@ -1,4 +1,4 @@
-{% comment %} {% load staticfiles  %} {% endcomment %}
+{% load static  %}
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,7 +20,6 @@
         align-items: center;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
-
     }
 
     #two {
@@ -39,7 +38,6 @@
 
     .upc {
         margin-left: 180px;
-
     }
 
     .desc {
@@ -52,18 +50,23 @@
 
     .descd {
         font-size: 16px;
-        color: {{instance.instance.event_font_color}};
+        color: {{instance.event_font_color}};
         font-family: 'Roboto', sans-serif;
         font-weight: 400;
         margin: 0;
     }
 
     .days {
-        color: {{instance.instance.event_font_color}};
+        color: {{instance.event_font_color}};
         text-align: center;
         font-family: 'Roboto', sans-serif;
         font-size: 40px;
         font-weight: 700;
+    }
+
+    .img-events {
+        width: 50px;
+        height: 50px;
     }
 </style>
 
@@ -74,6 +77,7 @@
             {% for event in events %}
                 <div id="one">
                     <h1 class="days">{{event.event_day}}<br>{{event.event_date}}</h1>
+                    <img class="img-fluid img-events" src="{{event.event_image}}" alt="Event Image">    
                 </div>
                 <div id="two">
                     <p class="desc">{{event.event_title}}</p>
@@ -88,4 +92,3 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 <script src="static/owl.carousel.min.js"></script>
-
