--- a/training/templates/training/training_detail.html
+++ b/training/templates/training/training_detail.html
@@ -1,5 +1,5 @@
 <!-- training/templates/training/training_detail.html -->
-{% extends "base.html" %}
+{% comment %} {% extends "base.html" %} {% endcomment %}
 
 {% block content %}
 <h1>{{ training.title }}</h1>
