--- a/myplugin/templates/header_footer/page_header.html
+++ b/myplugin/templates/header_footer/page_header.html
@@ -1,7 +1,40 @@
 {% load static cms_tags sekizai_tags djangocms_alias_tags menu_tags   %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ <!-- Navigation-->
+ <nav class="navbar navbar-expand-lg navbar-light-x navbar-dark fixed-top {% if current_user %}{% if is_admin %}admin_top_nav{% endif %}{% endif %}" id="mainNav">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto">
+                {% block menubar %}{% show_menu 0 100 0 100 'menu/menu.html' %}{% endblock %}
+            </ul>
+            {% comment %} <div class="d-flex">
+                {% block searchbar %}
+                    <form class="d-flex ms-2">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                {% endblock %}
+                <!-- Social icons -->
+                <div class="ms-2">
+                    <a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="text-white ms-2"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="text-white ms-2"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="text-white ms-2"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div> {% endcomment %}
+        </div>
+    </div>
+</nav>
+
+ <!-- Navigation temp -2-->
+
+{% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="/">
             <img src="{% static "django-cms-logo.png" %}" alt="Logo" class="img-fluid" style="max-height: 40px;">
@@ -30,5 +63,5 @@
             </div>
         </div>
     </div>
-</nav>
+</nav> {% endcomment %}
 {% endblock %}
